@@ -1,6 +1,7 @@
 === Version 0.6.3
 * Enhancements
   * Added #expected_title method to PageObject
+  * Added #expected_element method to PageObject
 * Fixes
   * Udates to the README - Thanks to p0deje and ivaravko
   WARNING:  This change breaks existing code
